k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: preparsenal
  labels:
    app.kubernetes.io/name: preparsenal
    app.kubernetes.io/part-of: preparsenal-platform
